--- a/sass/blocks/_media.scss
+++ b/sass/blocks/_media.scss
@@ -174,3 +174,138 @@
     }
    
 }
+@media (max-width: 320px) {
+    .promo {
+        .header {
+            margin: 5px 20px;
+            &__official {
+                display: none;
+            }
+            &__contacts {
+                display: none;
+            }
+        }
+        &__wrapper {
+            h1 {
+                font-size: 30px;
+                text-align: center;
+                line-height: 38px;
+            }
+            h2 {
+                margin: 20px auto;
+                text-align: center;
+            }
+        }
+        &__icons {
+            justify-content: flex-start;
+            align-items: center;
+            width: 100%;
+            margin-top: 10px;
+            
+        }    
+        .button_main {
+            margin: 30px auto;
+            width: 230px;            
+        }
+        &__link {
+            margin: 18px auto;
+        }
+
+    }
+    .modal {
+        width: 250px;
+        .feed-form {
+            margin: 36px auto;
+            width: 250px;
+        }
+    }
+    .consultation {
+        .title {
+            text-align: center;
+            font-size: 17px;
+            line-height: 30px;
+        }
+        &__descr {
+            text-align: center;
+            font-size: 15px;
+        }
+        .feed-form {
+            margin: 36px auto;
+            width: 250px;
+        }
+    }
+    .carousel {
+        width: 100px;   
+        &__inner {
+            width: 320px;
+            padding-left: 0;
+            padding-right: 0;
+            img {
+                width: 100%;
+            }
+        }
+    }
+    .catalog {
+        padding-bottom: 30px;
+        &__tabs {
+            width: 300px;
+            margin-left: 10px;
+        }
+        &__tab {
+            width: 165px;
+            font-size: 10px;
+        }
+    }
+    .feed {
+        h2 {
+            font-size: 24px;
+        }
+        &__item {
+            margin: 0 auto;
+            margin-bottom: 5px;
+            width: 300px;
+            flex-direction: column;
+            align-items: center;
+        }
+        &__title {
+            text-align: center;
+            width: 200px;
+            padding: 0;
+            margin: 0;
+        }
+        &__subtitle {
+            text-align: center;
+            width: 200px;
+        }
+        &__descr {
+            text-align: center;
+            width: 200px;
+        }
+        &__wrapper {
+            width: 100%;
+            padding: 0;
+        }
+    }
+    .footer {
+        &__info {
+            padding: 20px 68px 60px 68px;
+            width: 280px;
+            height: 250px;
+        }
+        &__addr {
+            font-size: 14px;
+        }
+        &__phone {
+            font-size: 14px;
+        }
+        &__social {
+            flex-wrap: wrap;
+            justify-content: space-between;
+        }
+        &__social-item {
+            margin: 0;
+            width: 40px;
+            height: 40px;
+        }
+    }
+}
